tests/dataset/tpc-ds/compiler/c/q91.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct CallCenter CallCenter;
typedef struct CatalogReturn CatalogReturn;
typedef struct DateDim DateDim;
typedef struct Customer Customer;
typedef struct CustomerAddress CustomerAddress;
typedef struct CustomerDemographics CustomerDemographics;
typedef struct HouseholdDemographics HouseholdDemographics;

typedef struct {
  const char *call__center;
  const char *call__center__name;
  const char *manager;
  double returns__loss;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cc_call_center_sk;
  const char *cc_call_center_id;
  const char *cc_name;
  const char *cc_manager;
} call_center_t;

typedef struct {
  int cr_call_center_sk;
  int cr_returned_date_sk;
  int cr_returning_customer_sk;
  double cr_net_loss;
} catalog_return_t;

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;

typedef struct {
  int c_customer_sk;
  int c_current_cdemo_sk;
  int c_current_hdemo_sk;
  int c_current_addr_sk;
} customer_t;

typedef struct {
  int cd_demo_sk;
  const char *cd_marital_status;
  const char *cd_education_status;
} customer_demographic_t;
typedef struct {
  int len;
  customer_demographic_t *data;
} customer_demographic_list_t;
customer_demographic_list_t create_customer_demographic_list(int len) {
  customer_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int hd_demo_sk;
  const char *hd_buy_potential;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  int ca_gmt_offset;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int call__center;
  int call__center__name;
  int manager;
  double returns__loss;
} cc_item_t;
typedef struct {
  int len;
  cc_item_t *data;
} cc_item_list_t;
cc_item_list_t create_cc_item_list(int len) {
  cc_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cc_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CallCenter {
  int cc_call_center_sk;
  char *cc_call_center_id;
  char *cc_name;
  char *cc_manager;
} CallCenter;
typedef struct {
  int len;
  call_center_t *data;
} call_center_list_t;
call_center_list_t create_call_center_list(int len) {
  call_center_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(call_center_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogReturn {
  int cr_call_center_sk;
  int cr_returned_date_sk;
  int cr_returning_customer_sk;
  double cr_net_loss;
} CatalogReturn;
typedef struct {
  int len;
  catalog_return_t *data;
} catalog_return_list_t;
catalog_return_list_t create_catalog_return_list(int len) {
  catalog_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_year;
  int d_moy;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Customer {
  int c_customer_sk;
  int c_current_cdemo_sk;
  int c_current_hdemo_sk;
  int c_current_addr_sk;
} Customer;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerAddress {
  int ca_address_sk;
  int ca_gmt_offset;
} CustomerAddress;
typedef struct {
  int len;
  customer_address_t *data;
} customer_address_list_t;
customer_address_list_t create_customer_address_list(int len) {
  customer_address_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_address_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CustomerDemographics {
  int cd_demo_sk;
  char *cd_marital_status;
  char *cd_education_status;
} CustomerDemographics;
typedef struct {
  int len;
  customer_demographics_t *data;
} customer_demographics_list_t;
customer_demographics_list_t create_customer_demographics_list(int len) {
  customer_demographics_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographics_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct HouseholdDemographics {
  int hd_demo_sk;
  char *hd_buy_potential;
} HouseholdDemographics;
typedef struct {
  int len;
  household_demographics_t *data;
} household_demographics_list_t;
household_demographics_list_t create_household_demographics_list(int len) {
  household_demographics_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographics_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static int test_TPCDS_Q91_returns_result;
static void test_TPCDS_Q91_returns() {
  if (!((test_TPCDS_Q91_returns_result ==
         (tmp_item_t){.call__center = "CC1",
                      .call__center__name = "Main",
                      .manager = "Alice",
                      .returns__loss = 10.0}))) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  call_center_t call_center[] = {(call_center_t){.cc_call_center_sk = 1,
                                                 .cc_call_center_id = "CC1",
                                                 .cc_name = "Main",
                                                 .cc_manager = "Alice"}};
  int call_center_len = sizeof(call_center) / sizeof(call_center[0]);
  catalog_return_t catalog_returns[] = {
      (catalog_return_t){.cr_call_center_sk = 1,
                         .cr_returned_date_sk = 1,
                         .cr_returning_customer_sk = 1,
                         .cr_net_loss = 10.0}};
  int catalog_returns_len =
      sizeof(catalog_returns) / sizeof(catalog_returns[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2001, .d_moy = 5}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_current_cdemo_sk = 1,
                                        .c_current_hdemo_sk = 1,
                                        .c_current_addr_sk = 1}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_demographic_t customer_demographics[] = {
      (customer_demographic_t){.cd_demo_sk = 1,
                               .cd_marital_status = "M",
                               .cd_education_status = "Unknown"}};
  int customer_demographics_len =
      sizeof(customer_demographics) / sizeof(customer_demographics[0]);
  household_demographic_t household_demographics[] = {(household_demographic_t){
      .hd_demo_sk = 1, .hd_buy_potential = "1001-5000"}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_gmt_offset = (-6)}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  int result = first((cc_item_list_t){0, NULL});
  _json_int(result);
  test_TPCDS_Q91_returns_result = result;
  test_TPCDS_Q91_returns();
  return 0;
}
